--- a/football-mobile/app.json
+++ b/football-mobile/app.json
@@ -20,10 +20,17 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.mrgass.footballmobile"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "cccc4bdc-461d-4595-809f-30e5123363f9"
+      }
+    },
+    "owner": "mrgass"
   }
 }
