--- a/football-mobile/package.json
+++ b/football-mobile/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,14 +14,26 @@
     "@react-navigation/native-stack": "^7.3.25",
     "axios": "^1.11.0",
     "expo": "~53.0.20",
+    "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.10",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "socket.io-client": "^4.8.1",
-    "expo-linear-gradient": "~14.1.5"
+    "react-native-safe-area-context": "^5.4.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
