--- a/football-mobile/package.json
+++ b/football-mobile/package.json
@@ -20,6 +20,7 @@
     "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.10",
+    "lucide-react-native": "^0.539.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-safe-area-context": "^5.4.0",
