--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,8 @@ DB_HOST=127.0.0.1
 PORT=5000
 
 JWT_SECRET="secret"
+
+# .env
+RESET_DB=false  # true seulement pour reset complet
+NODE_ENV=development
+FRONTEND_URL=http://localhost:3000,http://localhost:3001
